--- a/test-output/html/output.html
+++ b/test-output/html/output.html
@@ -15,39 +15,39 @@
   </p>
 
   <div id="log">
-                  [INFO ] [2022-11-17 16:08:25,272] Register - Step 01: Click to Register link
+                  [INFO ] [2022-11-17 22:11:06,222] Register - Step 01: Click to Register link
 <br>
-                        [INFO ] [2022-11-17 16:08:25,975] Register - Step 02: Input FirstName to required field 'Thanh'
+                        [INFO ] [2022-11-17 22:11:07,486] Register - Step 02: Input FirstName to required field 'Thanh'
 <br>
-                        [INFO ] [2022-11-17 16:08:26,204] Register - Step 03: Input LastName to required field 'Nguyen'
+                        [INFO ] [2022-11-17 22:11:07,599] Register - Step 03: Input LastName to required field 'Nguyen'
 <br>
-                        [INFO ] [2022-11-17 16:08:26,441] Register - Step 04: Input Email to required field 'abc9398@mail.com'
+                        [INFO ] [2022-11-17 22:11:07,705] Register - Step 04: Input Email to required field 'abc3846@mail.com'
 <br>
-                        [INFO ] [2022-11-17 16:08:26,696] Register - Step 05: Input Password to required field '123456'
+                        [INFO ] [2022-11-17 22:11:07,807] Register - Step 05: Input Password to required field '123456'
 <br>
-                        [INFO ] [2022-11-17 16:08:26,912] Register - Step 06: Input Confirm Password to required field '123456'
+                        [INFO ] [2022-11-17 22:11:07,910] Register - Step 06: Input Confirm Password to required field '123456'
 <br>
-                        [INFO ] [2022-11-17 16:08:27,118] Register - Step 07: Click to Register Button
+                        [INFO ] [2022-11-17 22:11:08,004] Register - Step 07: Click to Register Button
 <br>
-                        [INFO ] [2022-11-17 16:08:28,067] Register - Step 08: Verify Register Success Message
+                        [INFO ] [2022-11-17 22:11:08,913] Register - Step 08: Verify Register Success Message
 <br>
-                        [INFO ] [2022-11-17 16:08:28,152] Register - Step 09: Click to Logout Button
+                        [INFO ] [2022-11-17 22:11:08,959] Register - Step 09: Click to Logout Button
 <br>
-                        [INFO ] [2022-11-17 16:08:28,927] Login - Step 01: Navigate to Login Button
+                        [INFO ] [2022-11-17 22:11:09,587] Login - Step 01: Navigate to Login Button
 <br>
-                        [INFO ] [2022-11-17 16:08:29,610] Login - Step 02: Input Not Found Email to Email Textbox 'abc9398@mail.com'
+                        [INFO ] [2022-11-17 22:11:10,137] Login - Step 02: Input Not Found Email to Email Textbox 'abc3846@mail.com'
 <br>
-                        [INFO ] [2022-11-17 16:08:29,865] Login - Step 03:  Input Password TextBox '123456'
+                        [INFO ] [2022-11-17 22:11:10,232] Login - Step 03:  Input Password TextBox '123456'
 <br>
-                        [INFO ] [2022-11-17 16:08:30,075] Login - Step 04:  Click to Login Button
+                        [INFO ] [2022-11-17 22:11:10,321] Login - Step 04:  Click to Login Button
 <br>
-                        [INFO ] [2022-11-17 16:08:30,870] Login - Step 05:  Verify Login Success
+                        [INFO ] [2022-11-17 22:11:10,946] Login - Step 05:  Verify Login Success
 <br>
-                        [INFO ] [2022-11-17 16:08:31,065] Login - Step 06: Navigate to MyAccoutLink
+                        [INFO ] [2022-11-17 22:11:11,029] Login - Step 06: Navigate to MyAccoutLink
 <br>
-                        [INFO ] [2022-11-17 16:08:31,713] Login - Step 07: Verify Login Success
+                        [INFO ] [2022-11-17 22:11:11,536] Login - Step 07: Verify Login Success
 <br>
-                        <br><a href="data:image/png;base64,D:\eclipse_Workspace\Framework\reportNGImages\User_02_Login_17_11_2022_04_08_31.png"><img src="data:image/png;base64,D:\eclipse_Workspace\Framework\reportNGImages\User_02_Login_17_11_2022_04_08_31.png" height='100' width='150'/> </a></br>
+                        <br><a href="data:image/png;base64,E:\Selenium\03 - Hybrid Framework\hybrid-framework-nopcommerce\reportNGImages\User_02_Login_17_11_2022_10_11_11.png"><img src="data:image/png;base64,E:\Selenium\03 - Hybrid Framework\hybrid-framework-nopcommerce\reportNGImages\User_02_Login_17_11_2022_10_11_11.png" height='100' width='150'/> </a></br>
             </div>
 
 </body>
