--- a/test-output/index.html
+++ b/test-output/index.html
@@ -49,7 +49,7 @@
               <ul>
                 <li>
                   <a href="#" panel-name="test-xml-NopCommerce" class="navigator-link ">
-                    <span>D:\eclipse_Workspace\Framework\resources\runNopComMerceTest.xml</span>
+                    <span>E:\Selenium\03 - Hybrid Framework\hybrid-framework-nopcommerce\resources\runNopComMerceTest.xml</span>
                   </a> <!-- navigator-link  -->
                 </li>
                 <li>
@@ -168,7 +168,7 @@
         </div> <!-- panel NopCommerce -->
         <div panel-name="test-xml-NopCommerce" class="panel">
           <div class="main-panel-header rounded-window-top">
-            <span class="header-content">D:\eclipse_Workspace\Framework\resources\runNopComMerceTest.xml</span>
+            <span class="header-content">E:\Selenium\03 - Hybrid Framework\hybrid-framework-nopcommerce\resources\runNopComMerceTest.xml</span>
           </div> <!-- main-panel-header rounded-window-top -->
           <div class="main-panel-content rounded-window-bottom">
             <pre>
@@ -228,16 +228,16 @@ data.addRows(2);
 data.setCell(0, 0, 0)
 data.setCell(0, 1, 'User_01_Register')
 data.setCell(0, 2, 'com.nopcommerce.user.Level_15_ReportNG_Screenshot')
-data.setCell(0, 3, 3662);
+data.setCell(0, 3, 3366);
 data.setCell(1, 0, 1)
 data.setCell(1, 1, 'User_02_Login')
 data.setCell(1, 2, 'com.nopcommerce.user.Level_15_ReportNG_Screenshot')
-data.setCell(1, 3, 2870);
+data.setCell(1, 3, 1989);
 window.suiteTableData['NopCommerce']= { tableData: data, tableDiv: 'times-div-NopCommerce'}
 return data;
 }
               </script>
-              <span class="suite-total-time">Total running time: 6 seconds</span>
+              <span class="suite-total-time">Total running time: 5 seconds</span>
               <div id="times-div-NopCommerce">
               </div> <!-- times-div-NopCommerce -->
             </div> <!-- times-div -->
@@ -251,44 +251,44 @@ return data;
             <div class="reporter-method-div">
               <span class="reporter-method-name">User_01_Register</span>
               <div class="reporter-method-output-div">
-                <span class="reporter-method-output">[INFO ] [2022-11-17 16:08:25,272] Register - Step 01: Click to Register link
+                <span class="reporter-method-output">[INFO ] [2022-11-17 22:11:06,222] Register - Step 01: Click to Register link
 <br></span>
-                <span class="reporter-method-output">[INFO ] [2022-11-17 16:08:25,975] Register - Step 02: Input FirstName to required field 'Thanh'
+                <span class="reporter-method-output">[INFO ] [2022-11-17 22:11:07,486] Register - Step 02: Input FirstName to required field 'Thanh'
 <br></span>
-                <span class="reporter-method-output">[INFO ] [2022-11-17 16:08:26,204] Register - Step 03: Input LastName to required field 'Nguyen'
+                <span class="reporter-method-output">[INFO ] [2022-11-17 22:11:07,599] Register - Step 03: Input LastName to required field 'Nguyen'
 <br></span>
-                <span class="reporter-method-output">[INFO ] [2022-11-17 16:08:26,441] Register - Step 04: Input Email to required field 'abc9398@mail.com'
+                <span class="reporter-method-output">[INFO ] [2022-11-17 22:11:07,705] Register - Step 04: Input Email to required field 'abc3846@mail.com'
 <br></span>
-                <span class="reporter-method-output">[INFO ] [2022-11-17 16:08:26,696] Register - Step 05: Input Password to required field '123456'
+                <span class="reporter-method-output">[INFO ] [2022-11-17 22:11:07,807] Register - Step 05: Input Password to required field '123456'
 <br></span>
-                <span class="reporter-method-output">[INFO ] [2022-11-17 16:08:26,912] Register - Step 06: Input Confirm Password to required field '123456'
+                <span class="reporter-method-output">[INFO ] [2022-11-17 22:11:07,910] Register - Step 06: Input Confirm Password to required field '123456'
 <br></span>
-                <span class="reporter-method-output">[INFO ] [2022-11-17 16:08:27,118] Register - Step 07: Click to Register Button
+                <span class="reporter-method-output">[INFO ] [2022-11-17 22:11:08,004] Register - Step 07: Click to Register Button
 <br></span>
-                <span class="reporter-method-output">[INFO ] [2022-11-17 16:08:28,067] Register - Step 08: Verify Register Success Message
+                <span class="reporter-method-output">[INFO ] [2022-11-17 22:11:08,913] Register - Step 08: Verify Register Success Message
 <br></span>
-                <span class="reporter-method-output">[INFO ] [2022-11-17 16:08:28,152] Register - Step 09: Click to Logout Button
+                <span class="reporter-method-output">[INFO ] [2022-11-17 22:11:08,959] Register - Step 09: Click to Logout Button
 <br></span>
               </div> <!-- reporter-method-output-div -->
             </div> <!-- reporter-method-div -->
             <div class="reporter-method-div">
               <span class="reporter-method-name">User_02_Login</span>
               <div class="reporter-method-output-div">
-                <span class="reporter-method-output">[INFO ] [2022-11-17 16:08:28,927] Login - Step 01: Navigate to Login Button
+                <span class="reporter-method-output">[INFO ] [2022-11-17 22:11:09,587] Login - Step 01: Navigate to Login Button
 <br></span>
-                <span class="reporter-method-output">[INFO ] [2022-11-17 16:08:29,610] Login - Step 02: Input Not Found Email to Email Textbox 'abc9398@mail.com'
+                <span class="reporter-method-output">[INFO ] [2022-11-17 22:11:10,137] Login - Step 02: Input Not Found Email to Email Textbox 'abc3846@mail.com'
 <br></span>
-                <span class="reporter-method-output">[INFO ] [2022-11-17 16:08:29,865] Login - Step 03:  Input Password TextBox '123456'
+                <span class="reporter-method-output">[INFO ] [2022-11-17 22:11:10,232] Login - Step 03:  Input Password TextBox '123456'
 <br></span>
-                <span class="reporter-method-output">[INFO ] [2022-11-17 16:08:30,075] Login - Step 04:  Click to Login Button
+                <span class="reporter-method-output">[INFO ] [2022-11-17 22:11:10,321] Login - Step 04:  Click to Login Button
 <br></span>
-                <span class="reporter-method-output">[INFO ] [2022-11-17 16:08:30,870] Login - Step 05:  Verify Login Success
+                <span class="reporter-method-output">[INFO ] [2022-11-17 22:11:10,946] Login - Step 05:  Verify Login Success
 <br></span>
-                <span class="reporter-method-output">[INFO ] [2022-11-17 16:08:31,065] Login - Step 06: Navigate to MyAccoutLink
+                <span class="reporter-method-output">[INFO ] [2022-11-17 22:11:11,029] Login - Step 06: Navigate to MyAccoutLink
 <br></span>
-                <span class="reporter-method-output">[INFO ] [2022-11-17 16:08:31,713] Login - Step 07: Verify Login Success
+                <span class="reporter-method-output">[INFO ] [2022-11-17 22:11:11,536] Login - Step 07: Verify Login Success
 <br></span>
-                <span class="reporter-method-output"><br><a href="data:image/png;base64,D:\eclipse_Workspace\Framework\reportNGImages\User_02_Login_17_11_2022_04_08_31.png"><img src="data:image/png;base64,D:\eclipse_Workspace\Framework\reportNGImages\User_02_Login_17_11_2022_04_08_31.png" height='100' width='150'/> </a></br></span>
+                <span class="reporter-method-output"><br><a href="data:image/png;base64,E:\Selenium\03 - Hybrid Framework\hybrid-framework-nopcommerce\reportNGImages\User_02_Login_17_11_2022_10_11_11.png"><img src="data:image/png;base64,E:\Selenium\03 - Hybrid Framework\hybrid-framework-nopcommerce\reportNGImages\User_02_Login_17_11_2022_10_11_11.png" height='100' width='150'/> </a></br></span>
               </div> <!-- reporter-method-output-div -->
             </div> <!-- reporter-method-div -->
           </div> <!-- main-panel-content rounded-window-bottom -->
@@ -313,17 +313,17 @@ return data;
               </div> <!-- configuration-class before -->
               <div class="test-method">
                 <span class="method-name">User_01_Register</span>
-                <span class="method-start">3088 ms</span>
+                <span class="method-start">4854 ms</span>
               </div> <!-- test-method -->
               <div class="test-method">
                 <img src="failed.png">
                 </img>
                 <span class="method-name">User_02_Login</span>
-                <span class="method-start">6752 ms</span>
+                <span class="method-start">8222 ms</span>
               </div> <!-- test-method -->
               <div class="configuration-class after">
                 <span class="method-name">afterClass</span>
-                <span class="method-start">9790 ms</span>
+                <span class="method-start">10328 ms</span>
               </div> <!-- configuration-class after -->
           </div> <!-- main-panel-content rounded-window-bottom -->
         </div> <!-- panel -->
