--- a/test-output/old/NopCommerce/reporter-output.html
+++ b/test-output/old/NopCommerce/reporter-output.html
@@ -1,34 +1,34 @@
-<h2>Reporter output</h2><table><tr><td>[INFO ] [2022-11-17 16:08:25,272] Register - Step 01: Click to Register link
+<h2>Reporter output</h2><table><tr><td>[INFO ] [2022-11-17 22:11:06,222] Register - Step 01: Click to Register link
 <br></td></tr>
-<tr><td>[INFO ] [2022-11-17 16:08:25,975] Register - Step 02: Input FirstName to required field 'Thanh'
+<tr><td>[INFO ] [2022-11-17 22:11:07,486] Register - Step 02: Input FirstName to required field 'Thanh'
 <br></td></tr>
-<tr><td>[INFO ] [2022-11-17 16:08:26,204] Register - Step 03: Input LastName to required field 'Nguyen'
+<tr><td>[INFO ] [2022-11-17 22:11:07,599] Register - Step 03: Input LastName to required field 'Nguyen'
 <br></td></tr>
-<tr><td>[INFO ] [2022-11-17 16:08:26,441] Register - Step 04: Input Email to required field 'abc9398@mail.com'
+<tr><td>[INFO ] [2022-11-17 22:11:07,705] Register - Step 04: Input Email to required field 'abc3846@mail.com'
 <br></td></tr>
-<tr><td>[INFO ] [2022-11-17 16:08:26,696] Register - Step 05: Input Password to required field '123456'
+<tr><td>[INFO ] [2022-11-17 22:11:07,807] Register - Step 05: Input Password to required field '123456'
 <br></td></tr>
-<tr><td>[INFO ] [2022-11-17 16:08:26,912] Register - Step 06: Input Confirm Password to required field '123456'
+<tr><td>[INFO ] [2022-11-17 22:11:07,910] Register - Step 06: Input Confirm Password to required field '123456'
 <br></td></tr>
-<tr><td>[INFO ] [2022-11-17 16:08:27,118] Register - Step 07: Click to Register Button
+<tr><td>[INFO ] [2022-11-17 22:11:08,004] Register - Step 07: Click to Register Button
 <br></td></tr>
-<tr><td>[INFO ] [2022-11-17 16:08:28,067] Register - Step 08: Verify Register Success Message
+<tr><td>[INFO ] [2022-11-17 22:11:08,913] Register - Step 08: Verify Register Success Message
 <br></td></tr>
-<tr><td>[INFO ] [2022-11-17 16:08:28,152] Register - Step 09: Click to Logout Button
+<tr><td>[INFO ] [2022-11-17 22:11:08,959] Register - Step 09: Click to Logout Button
 <br></td></tr>
-<tr><td>[INFO ] [2022-11-17 16:08:28,927] Login - Step 01: Navigate to Login Button
+<tr><td>[INFO ] [2022-11-17 22:11:09,587] Login - Step 01: Navigate to Login Button
 <br></td></tr>
-<tr><td>[INFO ] [2022-11-17 16:08:29,610] Login - Step 02: Input Not Found Email to Email Textbox 'abc9398@mail.com'
+<tr><td>[INFO ] [2022-11-17 22:11:10,137] Login - Step 02: Input Not Found Email to Email Textbox 'abc3846@mail.com'
 <br></td></tr>
-<tr><td>[INFO ] [2022-11-17 16:08:29,865] Login - Step 03:  Input Password TextBox '123456'
+<tr><td>[INFO ] [2022-11-17 22:11:10,232] Login - Step 03:  Input Password TextBox '123456'
 <br></td></tr>
-<tr><td>[INFO ] [2022-11-17 16:08:30,075] Login - Step 04:  Click to Login Button
+<tr><td>[INFO ] [2022-11-17 22:11:10,321] Login - Step 04:  Click to Login Button
 <br></td></tr>
-<tr><td>[INFO ] [2022-11-17 16:08:30,870] Login - Step 05:  Verify Login Success
+<tr><td>[INFO ] [2022-11-17 22:11:10,946] Login - Step 05:  Verify Login Success
 <br></td></tr>
-<tr><td>[INFO ] [2022-11-17 16:08:31,065] Login - Step 06: Navigate to MyAccoutLink
+<tr><td>[INFO ] [2022-11-17 22:11:11,029] Login - Step 06: Navigate to MyAccoutLink
 <br></td></tr>
-<tr><td>[INFO ] [2022-11-17 16:08:31,713] Login - Step 07: Verify Login Success
+<tr><td>[INFO ] [2022-11-17 22:11:11,536] Login - Step 07: Verify Login Success
 <br></td></tr>
-<tr><td><br><a href="data:image/png;base64,D:\eclipse_Workspace\Framework\reportNGImages\User_02_Login_17_11_2022_04_08_31.png"><img src="data:image/png;base64,D:\eclipse_Workspace\Framework\reportNGImages\User_02_Login_17_11_2022_04_08_31.png" height='100' width='150'/> </a></br></td></tr>
+<tr><td><br><a href="data:image/png;base64,E:\Selenium\03 - Hybrid Framework\hybrid-framework-nopcommerce\reportNGImages\User_02_Login_17_11_2022_10_11_11.png"><img src="data:image/png;base64,E:\Selenium\03 - Hybrid Framework\hybrid-framework-nopcommerce\reportNGImages\User_02_Login_17_11_2022_10_11_11.png" height='100' width='150'/> </a></br></td></tr>
 </table>
