--- a/test-output/old/NopCommerce/reporter-output.html
+++ b/test-output/old/NopCommerce/reporter-output.html
@@ -1,41 +1,1 @@
-<<<<<<< HEAD
-<h2>Reporter output</h2><table><tr><td>[INFO ] [2022-11-17 22:11:06,222] Register - Step 01: Click to Register link
-=======
-<h2>Reporter output</h2><table><tr><td>[INFO ] [2022-11-21 11:23:44,221] Register - Step 04: Input Email to required field 'abc5026@mail.com'
->>>>>>> branch 'master' of https://github.com/xecoiia1/hybrid-framework-nopcommerce.git
-<br></td></tr>
-<<<<<<< HEAD
-<tr><td>[INFO ] [2022-11-17 22:11:07,486] Register - Step 02: Input FirstName to required field 'Thanh'
-<br></td></tr>
-<tr><td>[INFO ] [2022-11-17 22:11:07,599] Register - Step 03: Input LastName to required field 'Nguyen'
-<br></td></tr>
-<tr><td>[INFO ] [2022-11-17 22:11:07,705] Register - Step 04: Input Email to required field 'abc3846@mail.com'
-<br></td></tr>
-<tr><td>[INFO ] [2022-11-17 22:11:07,807] Register - Step 05: Input Password to required field '123456'
-<br></td></tr>
-<tr><td>[INFO ] [2022-11-17 22:11:07,910] Register - Step 06: Input Confirm Password to required field '123456'
-<br></td></tr>
-<tr><td>[INFO ] [2022-11-17 22:11:08,004] Register - Step 07: Click to Register Button
-<br></td></tr>
-<tr><td>[INFO ] [2022-11-17 22:11:08,913] Register - Step 08: Verify Register Success Message
-<br></td></tr>
-<tr><td>[INFO ] [2022-11-17 22:11:08,959] Register - Step 09: Click to Logout Button
-<br></td></tr>
-<tr><td>[INFO ] [2022-11-17 22:11:09,587] Login - Step 01: Navigate to Login Button
-<br></td></tr>
-<tr><td>[INFO ] [2022-11-17 22:11:10,137] Login - Step 02: Input Not Found Email to Email Textbox 'abc3846@mail.com'
-<br></td></tr>
-<tr><td>[INFO ] [2022-11-17 22:11:10,232] Login - Step 03:  Input Password TextBox '123456'
-<br></td></tr>
-<tr><td>[INFO ] [2022-11-17 22:11:10,321] Login - Step 04:  Click to Login Button
-<br></td></tr>
-<tr><td>[INFO ] [2022-11-17 22:11:10,946] Login - Step 05:  Verify Login Success
-<br></td></tr>
-<tr><td>[INFO ] [2022-11-17 22:11:11,029] Login - Step 06: Navigate to MyAccoutLink
-<br></td></tr>
-<tr><td>[INFO ] [2022-11-17 22:11:11,536] Login - Step 07: Verify Login Success
-<br></td></tr>
-<tr><td><br><a href="data:image/png;base64,E:\Selenium\03 - Hybrid Framework\hybrid-framework-nopcommerce\reportNGImages\User_02_Login_17_11_2022_10_11_11.png"><img src="data:image/png;base64,E:\Selenium\03 - Hybrid Framework\hybrid-framework-nopcommerce\reportNGImages\User_02_Login_17_11_2022_10_11_11.png" height='100' width='150'/> </a></br></td></tr>
-=======
->>>>>>> branch 'master' of https://github.com/xecoiia1/hybrid-framework-nopcommerce.git
-</table>
+<h2>Reporter output</h2><table></table>
