--- a/test-output/old/NopCommerce/toc.html
+++ b/test-output/old/NopCommerce/toc.html
@@ -22,8 +22,8 @@
 </tr></table>
 <table width='100%' class='test-failed'>
 <tr><td>
-<table style='width: 100%'><tr><td valign='top'>Run on Chrome (1/1/0)</td><td valign='top' align='right'>
-  <a href='Run on Chrome.html' target='mainFrame'>Results</a>
+<table style='width: 100%'><tr><td valign='top'>Run on Firefox (1/1/0)</td><td valign='top' align='right'>
+  <a href='Run on Firefox.html' target='mainFrame'>Results</a>
 </td></tr></table>
 </td></tr><p/>
 </table>
